refactor: 빈 리스트를 반환 할 때 List.of() 대신 명확하게 보이기 위해 Collections.emptyList() 사용